syntax = "proto3";

package protoCenterGame;

message BindMsgRequest {  
	int32 clientId = 1; 
	string name = 2;
}